79d4739ec93be9039b9aef3d4e47b38ea08d74a0 Fix: Use gap for columns layout which is far more consistent Fix: Dropdown styling didn't really work for the collection headers with the styling integrations.
Sync to source repo @79d4739ec93be9039b9aef3d4e47b38ea08d74a0

--- a/css/buttons.bulma.css
+++ b/css/buttons.bulma.css
@@ -122,10 +122,6 @@ div.dt-button-collection div.dropdown-menu {
   z-index: 2002;
   min-width: 100%;
 }
-div.dt-button-collection div.dt-button-collection-title {
-  background-color: white;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-}
 div.dt-button-collection div.dt-btn-split-wrapper {
   width: 100%;
   padding-left: 5px;
@@ -171,8 +167,7 @@ div.dt-button-collection.fixed {
   left: 50%;
   margin-left: -75px;
   border-radius: 5px;
-  max-height: 100vh;
-  overflow: auto;
+  background-color: white;
 }
 div.dt-button-collection.fixed.two-column {
   margin-left: -200px;
@@ -184,22 +179,26 @@ div.dt-button-collection.fixed.four-column {
   margin-left: -300px;
 }
 div.dt-button-collection.fixed.columns {
-  margin-left: -412px;
+  margin-left: -409px;
 }
 @media screen and (max-width: 1024px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -309px;
+    margin-left: -308px;
   }
 }
 @media screen and (max-width: 640px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -205px;
+    margin-left: -203px;
   }
 }
 @media screen and (max-width: 460px) {
   div.dt-button-collection.fixed.columns {
-    margin-left: -102px;
+    margin-left: -100px;
   }
+}
+div.dt-button-collection.fixed > :last-child {
+  max-height: 100vh;
+  overflow: auto;
 }
 div.dt-button-collection.two-column > :last-child, div.dt-button-collection.three-column > :last-child, div.dt-button-collection.four-column > :last-child {
   display: block !important;
@@ -245,12 +244,14 @@ div.dt-button-collection.columns > :last-child {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  width: 819px;
+  gap: 6px;
+  width: 818px;
   padding-bottom: 1px;
 }
 div.dt-button-collection.columns > :last-child .dt-button {
   min-width: 200px;
   flex: 0 1;
+  margin: 0;
 }
 div.dt-button-collection.columns.dtb-b3 > :last-child, div.dt-button-collection.columns.dtb-b2 > :last-child, div.dt-button-collection.columns.dtb-b1 > :last-child {
   justify-content: space-between;
@@ -266,12 +267,12 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
 }
 @media screen and (max-width: 1024px) {
   div.dt-button-collection.columns > :last-child {
-    width: 615px;
+    width: 612px;
   }
 }
 @media screen and (max-width: 640px) {
   div.dt-button-collection.columns > :last-child {
-    width: 410px;
+    width: 406px;
   }
   div.dt-button-collection.columns.dtb-b3 .dt-button {
     flex: 0 1 32%;
@@ -279,11 +280,20 @@ div.dt-button-collection.columns.dtb-b1 .dt-button {
 }
 @media screen and (max-width: 460px) {
   div.dt-button-collection.columns > :last-child {
-    width: 205px;
+    width: 200px;
   }
 }
 div.dt-button-collection.fixed {
   max-width: none;
+  display: block;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
+  border-radius: 4;
+  padding-top: 0.5rem;
+}
+div.dt-button-collection.fixed .dropdown-content {
+  box-shadow: none;
+  padding-top: 0;
+  border-radius: 0;
 }
 div.dt-button-collection.fixed:before, div.dt-button-collection.fixed:after {
   display: none;
